--- a/src/pages/youthProfiles/list/YouthList.module.css
+++ b/src/pages/youthProfiles/list/YouthList.module.css
@@ -2,10 +2,21 @@
     display: flex;
     margin-top: 15px;
     margin-bottom: 50px;
+    flex-direction: column;
 }
 
-.textField {
+.textFieldFirstName,
+.textFieldLastName {
+    margin-left: 20px;
     margin-right: 20px;
+}
+
+.textFieldFirstName {
+    order: 2;
+}
+
+.textFieldLastName {
+    order: 3;
 }
 
 .create,
@@ -15,13 +26,53 @@
     height: 56px;
     margin-top: 29px;
     min-width: 100px;
+    margin-right: 20px;
+}
+
+.search {
+    margin-left: 20px;
+    order: 3;
 }
 
 .create {
     margin-left: auto;
-    margin-right: 10px;
+    order: 1;
 }
 
 .searchResultText {
     margin-top: 20px;
 }
+
+.dataGrid {
+    padding: 0 20px;
+}
+
+@media only screen and (min-width: 775px) {
+    .actionRow {
+        flex-direction: row;
+    }
+
+    .textFieldFirstName {
+        margin-left: 0;
+        order: 1;
+    }
+
+    .textFieldLastName {
+         margin-left: 0;
+        order: 2;
+    }
+
+    .search {
+        margin-left: 0;
+        order: 3;
+    }
+
+    .create {
+        order: 4;
+    }
+
+    .dataGrid {
+        padding: 0;
+    }
+}
+
