--- a/src/pages/youthProfiles/show/YouthDetails.module.css
+++ b/src/pages/youthProfiles/show/YouthDetails.module.css
@@ -10,6 +10,8 @@
 
 .goBack {
     margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .row {
@@ -36,4 +38,30 @@
 
 .icon {
     margin-right: 15px;
+}
+
+.editButtons {
+    margin-left: 0;
+    display: flex;
+    margin-top: 20px;
+}
+
+.button {
+    background: #000000;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    margin-right: 20px;
+}
+
+
+@media (min-width: 550px) {
+    .goBack {
+        flex-direction: row;
+        margin-top: 0;
+    }
+
+    .editButtons {
+        margin-top: 0;
+        margin-left: auto;
+    }
 }
