--- a/src/pages/youthProfiles/form/YouthProfileForm.module.css
+++ b/src/pages/youthProfiles/form/YouthProfileForm.module.css
@@ -1,39 +1,39 @@
 .title {
-    font-size: 1.375rem;
-    line-height: 1.86;
-    font-family: HelsinkiGrotesk, serif;
-    font-weight: bold;
-    margin: 0;
+  font-size: 1.375rem;
+  line-height: 1.86;
+  font-family: HelsinkiGrotesk, serif;
+  font-weight: bold;
+  margin: 0;
 }
 
 .wrapper {
-    margin: 2rem;
+  margin: 2rem;
 }
 
 .infoContainer {
-    margin-left: 2rem;
-    margin-top: 1rem;
+  margin-left: 2rem;
+  margin-top: 1rem;
 }
 
 .rowContainer {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
 .textField {
-    margin-right: 1rem;
-    width: 305px;
+  margin-right: 1rem;
+  width: 305px;
 }
 
 .select {
-    max-width: 305px;
+  max-width: 305px;
 }
 
 .cancelButton {
-    background: #FFFFFF;
-    border: 1px solid #000000;
-    color: #000000;
-    padding: 8px 20px;
-    margin-left: 20px;
+  background: #ffffff;
+  border: 1px solid #000000;
+  color: #000000;
+  padding: 8px 20px;
+  margin-left: 20px;
 }
