--- a/src/pages/youthProfiles/list/YouthList.module.css
+++ b/src/pages/youthProfiles/list/YouthList.module.css
@@ -23,24 +23,30 @@
 .search {
   background: #000000;
   color: #ffffff;
-  height: 56px;
-  margin-top: 29px;
+  height: 55px;
   min-width: 100px;
   margin-right: 20px;
 }
 
 .search {
   margin-left: 20px;
+  margin-top: 25px;
   order: 3;
 }
 
 .create {
   margin-left: auto;
   order: 1;
+  min-width: 220px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
 }
 
 .searchResultText {
   margin: 20px 0;
+  padding-left: 20px;
 }
 
 .dataGrid {
@@ -50,6 +56,7 @@
 @media only screen and (min-width: 775px) {
   .actionRow {
     flex-direction: row;
+    align-items: flex-end;
   }
 
   .textFieldFirstName {
@@ -69,9 +76,14 @@
 
   .create {
     order: 4;
+    margin-bottom: 0;
   }
 
   .dataGrid {
     padding: 0;
+  }
+
+  .searchResultText {
+    padding-left: 0;
   }
 }
