Add helper texts for multiple approvers.

--- a/src/pages/youthProfiles/form/youthProfileArrayField.module.css
+++ b/src/pages/youthProfiles/form/youthProfileArrayField.module.css
@@ -16,3 +16,7 @@
 .additionalActionButton:not(:first-child) {
   margin-left: var(--spacing-m);;
 }
+
+.additionalHelperText {
+  margin-bottom: calc(var(--spacing-m) * -1);
+}
