--- a/src/pages/youthProfiles/show/YouthDetails.module.css
+++ b/src/pages/youthProfiles/show/YouthDetails.module.css
@@ -41,6 +41,10 @@
   margin-right: 15px;
 }
 
+.approverDescriptions {
+  margin-bottom: 0;
+}
+
 .editButtons {
   margin-left: 0;
   display: flex;
